<resources>
    <string name="app_name">DMLcalc</string>
    <string name="PREFS_NAME">de.silbaer.dmlcal.appsettings</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_clearCache">Cache löschen</string>
    <string name="action_dragonlist">Drachenliste</string>
    <string name="DDW">DDW</string>
    <string name="DDW_mom">DDW_mom</string>
    <string name="DDW_dad">DDW_dad</string>
    <string name="DDM">DDM</string>
    <string name="DDM_e1">DDM_e1</string>
    <string name="DDM_e2">DDM_e2</string>
    <string name="DDM_e3">DDM_e3</string>
    <string name="DDM_e4">DDM_e4</string>
    <string name="txt_button_select">auswählen</string>
    <string name="txt_label_ddm">DDM:</string>
    <string name="txt_label_ddw">DDW:</string>
    <string name="txt_label_how_to_breed">Wie züchten</string>
    <string name="txt_button_show">anzeigen</string>
    <string name="txt_hint_child">Kind</string>
    <string name="txt_label_breeding">Zucht</string>
    <string name="txt_hint_dad">Vater</string>
    <string name="txt_hint_mom">Mutter</string>
    <string name="txt_button_show_nbreed">Zucht\nanzeigen</string>
    <string name="txt_hint_insert_ddw_here">Wochendrache eingeben</string>
    <string name="txt_label_mom">Mutter:</string>
    <string name="txt_hint_insert_mom_here">Mutter</string>
    <string name="txt_label_dad">Vater:</string>
    <string name="txt_hint_insert_dad_here">Vater</string>
    <string name="txt_hint_insert_ddm_here">Monatsdrache eingeben</string>
    <string name="txt_label_element_1">Element 1:</string>
    <string name="txt_label_element_2">Element 2:</string>
    <string name="txt_label_element_3">Element 3:</string>
    <string name="txt_label_element_4">Element 4:</string>
    <string name="txt_hint_select_element_4">Element 4</string>
    <string name="txt_hint_select_element_3">Element 3</string>
    <string name="txt_hint_select_element_2">Element 2</string>
    <string name="txt_hint_select_element_1">Element 1</string>
    <string name="txt_button_about_ok">OK</string>
    <string name="txt_Info_Message">Version %1$s\nAnregungen/Kritik an:\nsilbaer@gmail.com</string>
    <string name="txt_howProgressTitle">Bitte warten...</string>
    <string name="txt_howProgressMsg">Berechne Eltern...</string>
    <string name="txt_breedProgressTitle">Bitte warten...</string>
    <string name="txt_breedProgressMsg">Berechne Nachkommen...</string>

    <!-- Texts for settings -->
    <string name="txt_vip_settings">VIP-Settings</string>
    <string name="txt_timedisplay">Zeit Anzeige</string>
    <string name="txt_DisplayVipTimes">VIP-Zeiten</string>
    <string name="txt_DisplayNormalTimes">Normale Zeiten</string>
    <string name="txt_UseVipDragons">Benutze VIP Drachen</string>
    <string name="txt_NotUseVipDragons">VIP Drachen nicht benutzen</string>
    <string name="txt_VipDrachen">VIP Drachen</string>

    <string name="txt_DragonList_settings">Drachenliste</string>
    <string name="txt_ShowStatsInList">Schaden, Hitpoints, Goldertrag anzeigen</string>
    <string name="txt_NotShowStatsInList">Schaden, Hitpoints, Gold nicht anzeigen</string>
    <string name="txt_StatsInList">Stats in Liste</string>
    <string name="txt_ShowTimesInList">Brut- und Zuchtzeit anzeigen</string>
    <string name="txt_NotShowTimesInList">Brut- und Zuchtzeit nicht anzeigen</string>
    <string name="txt_TimeInList">Zeiten in Liste</string>

    <!--   -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_ddw">Wochendrache eingeben</string>
    <string name="action_ddm">Monatsdrache eingeben</string>
    <string name="txt_ddm_imput_title">Monatsdrache eingeben</string>
    <string name="txt_ddw_imput_title">Wochendrache eingeben</string>
    <string name="txt_dragonlist_title">Drachenliste</string>

    <string name="txt_misc_settings">Weitere Einstellungen</string>
    <string name="txt_EnchantBreed">Verzauberte Zucht</string>
    <string name="txt_NotUseEnchantBreed">Verzauberte Zucht nicht benutzen</string>
    <string name="txt_UseEnchantBreed">Verzauberte Zucht benutzen</string>
    <string name="txt_warning_ddm_ddw_not_set">Monatsdrache und Wochendrache nicht gesetzt</string>
    <string name="txt_warning_ddw_not_set">Wochendrache nicht gesetzt</string>
    <string name="txt_warning_ddm_not_set">Monatsdrache nicht gesetzt</string>




</resources>
