<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/txt_vip_settings"
        android:key="pref_vip_settings">

        <SwitchPreference
            android:key="pref_timedisplay"
            android:summaryOff="@string/txt_DisplayNormalTimes"
            android:summaryOn="@string/txt_DisplayVipTimes"
            android:title="@string/txt_timedisplay"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="pref_vipdragons"
            android:summaryOn="@string/txt_UseVipDragons"
            android:summaryOff="@string/txt_NotUseVipDragons"
            android:title="@string/txt_VipDrachen"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/txt_misc_settings"
        android:key="pref_misc_settings">
        <SwitchPreference
            android:key="pref_enchantbreed"
            android:summaryOn="@string/txt_UseEnchantBreed"
            android:summaryOff="@string/txt_NotUseEnchantBreed"
            android:title="@string/txt_EnchantBreed"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>