<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.silbaer.dmlcalc.ddmInputFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_label_ddm"
                android:id="@+id/ddm_inputFragment_lblDDM" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ddm_inputFragment_autoCompleteDDM"
                android:hint="@string/txt_hint_insert_ddm_here" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_label_element_1"
                android:id="@+id/ddm_inputFragment_lb_ddmElement1" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_select_element_1"
                android:id="@+id/ddm_inputFragment_ac_ddmElement1" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_label_element_2"
                android:id="@+id/ddm_inputFragment_lb_ddmElement2" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_select_element_2"
                android:id="@+id/ddm_inputFragment_ac_ddmElement2" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_label_element_3"
                android:id="@+id/ddm_inputFragment_lb_ddmElement3" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_select_element_3"
                android:id="@+id/ddm_inputFragment_ac_ddmElement3" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_label_element_4"
                android:id="@+id/ddm_inputFragment_lb_ddmElement4" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_select_element_4"
                android:id="@+id/ddm_inputFragment_ac_ddmElement4" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
